Add submodules (whad, butterfly, nimble) for 231213

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "231213_single-cable_raw/submodules/screaming_channels_ble"]
 	path = 231213_single-cable_raw/submodules/screaming_channels_ble
 	url = git@github.com:pierreay/screaming_channels_ble.git
+[submodule "231213_single-cable_raw/submodules/screaming_channels_nimble"]
+	path = 231213_single-cable_raw/submodules/screaming_channels_nimble
+	url = git@github.com:pierreay/screaming_channels_nimble.git
+[submodule "231213_single-cable_raw/submodules/butterfly"]
+	path = 231213_single-cable_raw/submodules/butterfly
+	url = git@github.com:pierreay/butterfly.git
+[submodule "231213_single-cable_raw/submodules/whad"]
+	path = 231213_single-cable_raw/submodules/whad
+	url = git@github.com:pierreay/whad.git
