--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "240110_single-leak-pairing-1m-lna_raw/submodules/screaming_channels_nimble"]
 	path = 240110_single-leak-pairing-1m-lna_raw/submodules/screaming_channels_nimble
 	url = git@github.com:pierreay/screaming_channels_nimble.git
+[submodule "240112_multi-leak-insub-1m-lna_raw/submodules/screaming_channels_nimble"]
+	path = 240112_multi-leak-insub-1m-lna_raw/submodules/screaming_channels_nimble
+	url = git@github.com:pierreay/screaming_channels_nimble.git
