[envrc] Add SC_SRC variable

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,3 @@
 export SC=/home/drac/git/screaming_channels_ble
-export PYTHONPATH=$SC/src
+export SC_SRC=/home/drac/git/screaming_channels_ble/src
+export PYTHONPATH=$SC_SRC
