--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,8 @@
-export SC=/home/drac/git/screaming_channels_ble
-export SC_SRC=/home/drac/git/screaming_channels_ble/src
+# Screaming Channels repository. 
+export SC=$HOME/git/screaming_channels_ble
+# Screaming Channels source directory containing Python modules. 
+export SC_SRC=$SC/src
+# Allows to import Screaming Channels Python modules in scripts here.
 export PYTHONPATH=$SC_SRC
+# Dataset repository.
+export REPO_ROOT="$(realpath .)"
