Update envrc with screaming channel poc path

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,5 @@
+# Original Screaming Channels repository. 
+export SC_POC=$HOME/git/screaming_channels_poc
 # Screaming Channels repository. 
 export SC=$HOME/git/screaming_channels_ble
 # Screaming Channels source directory containing Python modules. 
