Update envrc with custom LD_LIBRARY_PATH

--- a/.envrc
+++ b/.envrc
@@ -8,3 +8,5 @@ export SC_SRC=$SC/src
 export PYTHONPATH=$SC_SRC
 # Dataset repository.
 export REPO_ROOT="$(realpath .)"
+# Installation path of custom libraries (e.g., HEL).
+export LD_LIBRARY_PATH="/usr/local/lib"
