--- a/.envrc
+++ b/.envrc
@@ -2,6 +2,8 @@
 export SC_POC=$HOME/git/screaming_channels_poc
 # Screaming Channels repository. 
 export SC=$HOME/git/screaming_channels_ble
+# Nimble firmware repository. 
+export NIMBLE=$HOME/git/screaming_channels_nimble
 # Screaming Channels source directory containing Python modules. 
 export SC_SRC=$SC/src
 # Allows to import Screaming Channels Python modules in scripts here.
