Make some space in .envrc and comment it

--- a/.envrc
+++ b/.envrc
@@ -1,14 +1,26 @@
+# * External repositories
+
 # Original Screaming Channels repository. 
 export SC_POC=$HOME/git/screaming_channels_poc
+
 # Screaming Channels repository. 
 export SC=$HOME/git/screaming_channels_ble
-# Nimble firmware repository. 
-export NIMBLE=$HOME/git/screaming_channels_nimble
+
 # Screaming Channels source directory containing Python modules. 
 export SC_SRC=$SC/src
+
+# Nimble firmware repository. 
+export NIMBLE=$HOME/git/screaming_channels_nimble
+
+# * Interal paths
+
+# Dataset repository root.
+export REPO_ROOT="$(realpath .)"
+
+# * Custom Python environment
+
 # Allows to import Screaming Channels Python modules in scripts here.
 export PYTHONPATH=$SC_SRC
-# Dataset repository.
-export REPO_ROOT="$(realpath .)"
-# Installation path of custom libraries (e.g., HEL).
+
+# Allows loading of custom libraries (e.g., HEL).
 export LD_LIBRARY_PATH="/usr/local/lib"
