Add new env variables for new organization

--- a/.envrc
+++ b/.envrc
@@ -17,6 +17,15 @@ export NIMBLE=$HOME/git/screaming_channels_nimble
 # Dataset repository root.
 export REPO_ROOT="$(realpath .)"
 
+# Dataset path.
+export REPO_DATASET_PATH="${REPO_ROOT}/datasets"
+
+# Experiments path.
+export REPO_EXPE_PATH="${REPO_ROOT}/experiments"
+
+# Scripts path.
+export REPO_SCRIPTS_PATH="${REPO_ROOT}/scripts"
+
 # * Custom Python environment
 
 # Allows to import Screaming Channels Python modules in scripts here.
