Add Nordic SDK in .envrc for compiling firmware

--- a/.envrc
+++ b/.envrc
@@ -12,6 +12,9 @@ export SC_SRC=$SC/src
 # Nimble firmware repository. 
 export NIMBLE=$HOME/git/screaming_channels_nimble
 
+# Nordic SDK (for compiling firmware in $SC_POC).
+export NORDIC_SEMI_SDK=/opt/nRF5_SDK_14.2.0_17b948a
+
 # * Interal paths
 
 # Dataset repository root.
